Added: GUIDS Complete cart Orderpage(uncompleted) Fixed bugs etc.

--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 <script src="scripts/directives/homepageProducts.js"></script>
 <!--DIRECTIVES END-->
 <!--FACTORIES START-->
+<script src="scripts/factories/guidfactory.js"></script>
 <script src="scripts/factories/cartfactory.js"></script>
 <script src="scripts/factories/productsfactory.js"></script>
 <script src="scripts/factories/customersfactory.js"></script>
