Fixed all buggs that needed to be fixed before finishing project.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
 <div class="container" ng-view>
 </div>
 
+<footer class="footer">
+    <div class="container">
+        <p class="pull-left">Angular store made by Angelo Zwennes.</p>
+        <p class="pull-right">Version 0.90</p>
+    </div>
+</footer>
+
 <script src="/scripts/app.js"></script>
 <!--PLUGINS START-->
 <script src="scripts/vendor/jquery.js"></script>
